Minor UI tweaks
added custom error page
added try catches to trigger error page
fixed typos
finalised comments

--- a/EtainTest/Views/Shared/Error.cshtml
+++ b/EtainTest/Views/Shared/Error.cshtml
@@ -7,7 +7,7 @@
 <body>
     <hgroup>
         <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h2>We're really sorry about this, an error occurred while trying to do that.</h2>
     </hgroup>
 </body>
 </html>
