--- a/EtainTest/Views/Home/Index.cshtml
+++ b/EtainTest/Views/Home/Index.cshtml
@@ -93,8 +93,8 @@
         <div class="form-horizontal hidden-lg hidden-md">
             @* FOR MOBILE*@
 
-            <h4 style="text-align:center;">Last Sync Time: @(Model.ToList()[0].LastSyncTime)</h4>
-            <p style="text-align:center;">Swipe to Refresh</p>
+            <h4 style="text-align:center;">Last Sync: @(Model.ToList()[0].LastSyncTime)</h4>
+            <p style="text-align:center;">Swipe from top to Refresh</p>
 
             @foreach (var item in Model)
             {
@@ -127,7 +127,7 @@
             <div id="main" class="row" style="padding:20px;text-align:center;">
 
                 <div class="row">
-                    <h2 style="text-align:center;">Last Sync Time: @(Model.ToList()[0].LastSyncTime)</h2>
+                    <h2 style="text-align:center;">Last Sync: @(Model.ToList()[0].LastSyncTime)</h2>
                     <button type="button" onclick="showProgressDesktop();" class="btn btn-secondary btn-lg">Refresh Weather</button>
                 </div>
 
@@ -163,8 +163,8 @@
 
             <div id="main" class="row" style="padding:20px;text-align:center;">
 
-                <h2 style="text-align:center;">Last Sync Time: @(Model.ToList()[0].LastSyncTime)</h2>
-                <p style="text-align:center;">Swipe to Refresh</p>
+                <h2 style="text-align:center;">Last Sync: @(Model.ToList()[0].LastSyncTime)</h2>
+                <p style="text-align:center;">Swipe from top to Refresh</p>
 
                 @foreach (var item in Model)
                 {
